--- a/style.css
+++ b/style.css
@@ -40,3 +40,42 @@
         transform: translateY(-3px);
         box-shadow: 0 15px 40px rgba(251, 9, 55, 0.6);
       }
+      /* about section hero section */
+       .hero-bg {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+          url('https://img.freepik.com/free-photo/young-couple-talking-sales-person-car-showroom_1303-20443.jpg?ga=GA1.1.1284333705.1725910237&semt=ais_hybrid&w=740');
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+      }
+        .hero-b {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+          url('https://img.freepik.com/free-photo/we-are-hiring-concept-collage_23-2149557311.jpg?ga=GA1.1.1284333705.1725910237&semt=ais_hybrid&w=740');
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+      }
+      .fade-in {
+        opacity: 0;
+        transform: translateY(30px);
+        animation: fadeInUp 0.8s ease-out forwards;
+      }
+      
+      .fade-in-delay {
+        animation-delay: 0.3s;
+      }
+      
+      @keyframes fadeInUp {
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+      
+      .stats-counter {
+        transition: all 0.3s ease;
+      }
+      
+      .stats-counter:hover {
+        transform: translateY(-5px);
+      }
